name:                   hw-statsd
version:                0.0.0.1
synopsis:               Primitive functions and data types
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-statsd#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 John Ky
category:               Data
stability:              Experimental
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.22

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Statsd
  build-depends:        base                          >= 4          && < 5
                      , network
                      , pipes

  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2

test-suite hw-statsd-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        HaskellWorks.StatsdSpec
  build-depends:        base                          >= 4          && < 5
                      , pipes
                      , hspec
                      , hw-statsd
                      , QuickCheck
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-statsd
